do load release on runner then copy to vps server